--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
         <div class="main">
 
-            <div class="navbar">
+            <div class="navbar about">
                 <ul class="navbar-links">
                     <li class="active"><a href="about.html">About Us</a></li>
                     <li><a href="index.html">Hotel</a></li>
